# IVS_Kalkulacka

./: .editorconfig  .gitignore  README.md  hodnoceni.txt  skutecnost.txt
evaluation/: final_evaluation.md
plan/: xdohun00_xkedra00_xkolar79_plan.txt
src/: CMakeLists.txt  Doxyfile  Makefile  math_lib.cpp  math_lib.h  profiling.cpp  test_lib.cpp  test_prg.cpp
src/gui/: CMakeLists.txt  helpwindow.cpp  helpwindow.h  helpwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/include/: mainwindow.h  math_lib.h
src/resources/: Kalkulacka  Kalkulacka.desktop
